ejercicio -> archivos guia-5, agrego ej-extra-2-7

--- a/5-guia/5-sol.tex
+++ b/5-guia/5-sol.tex
@@ -5,767 +5,37 @@
 
 % Info para armar título.
 \title{Práctica 5 de álgebra 1} % título
-\author{Comunidad Algebraica} % autor
+\author{Comunidad algebraica} % autor
 \date{última compilacion: \today} % Cambiar de ser necesario
-
 \maketitle  % para que aprezca el título en el documento
 
-\section{Definiciones y fórmulas útiles}
-
-\def\mcd{(a:b)}
-
-\begin{itemize}
-	\item Sea $aX + bY = c \text{ con } a,\, b,\, c \en \enteros,\, a \distinto 0 \y b \distinto 0$ y sea
-	      $S = \set{ (x,y) \en \enteros^2 : aX + bY = C }$.\\
-	      Entonces $S \distinto \vacio \sisolosi (a:b) \divideA c$
-	      % \sisolosi
-	      %  \ub{A}{\frac{a}{\mcd}} x + \ub{B}{\frac{b}{\mcd}} y = \ub{C}{\frac{c}{(a:b)}} \en \enteros$,
-	      % \text{también tiene solución para $x$ y $y$.}
-
-	\item Las soluciones al sistema: $S = \set{(x,y) \en \enteros^2 \text{ con }
-			      \llaves{l}{
-				      x = x_0 + kb'\\
-				      y = y_0 + kb'
-			      }
-			      , k \en \enteros}
-	      $
-
-	\item $\congruencia{aX}{c}{b}$ con $ a,\, b \distinto 0$ tiene solución $\sisolosi \mcd \divideA c$ tiene solución $\sisolosi \mcd \divideA c$. En ese caso, coprimizando:
-\end{itemize}
-
-\textit\underline{Ecuaciones de congruencia}
-
-\begin{itemize}
-	\item Algoritmo de solución:
-	      \begin{enumerate}[label=\arabic*)]
-		      \item reducir $a,\, c$ módulo $m$. Podemos suponer $0 \leq a, c < m$
-		      \item tiene solución $\sisolosi (a:m) \divideA c$. Y en ese caso coprimizo:
-		            \[
-			            \congruencia{aX}{c}{m} \sisolosi \congruencia{a'X}{c'}{m},\ \text{ con } a' = \frac{a}{(a:m)},\, m' = \frac{m}{(a:m)} \text{ y } c' = \frac{c}{(a:m)}
-		            \]
-		      \item   Ahora que $a' \cop m'$, puedo limpiar los factores comunes entre $a'$ y $c'$ (los puedo simplificar)
-		            \[
-			            \congruencia{a'X}{c'}(m') \sisolosi \congruencia{a''X}{c''}{m'} \text{ con } a'' = \frac{a'}(a':c') \text{ y } c'' = \frac{c'}{(a':c')}
-		            \]
-		      \item Encuentro una solución particular $X_0$ con $ 0\leq X_0 < m'$ y tenemos
-		            \[
-			            \congruencia{aX}{c}{m} \sisolosi \congruencia{X}{X_0}{m'}
-		            \]
-	      \end{enumerate}
-
-\end{itemize}
-
-\textit\underline{Ecuaciones de congruencia}
-Sean $m_1,\dots m_n \en \enteros$ \underline{coprimos dos a dos} ($\paratodo i \distinto j$, se tiene $m_i \cop m_j$). \\
-Entonces, dados $c_1,\dots, c_n \en \enteros$ cualesquiera, el sistema de ecuaciones de congruencia.
-\[
-	\llave{c}{
-		\congruencia{X}{c_1}{m_1}\\
-		\congruencia{X}{c_2}{m_2}\\
-		\vdots\\
-		\congruencia{X}{c_n}{m_n}
-	}
-\]
-
-es equivalente al sistema (tienen misma soluciones)
-
-\[
-	\congruencia{X}{x_0}{m_1\cdot m_2 \cdots m_n}
-\]
-para algún $x_0$ con $0\leq x_0 < m_1\cdot m_2 \cdots m_n$
-
-\textit{\underline{Pequeño teorema de Fermat}}
-\begin{itemize}
-	\item Sea $p$ primo, y sea $a \en \enteros$. Entonces:
-	      \begin{enumerate}[label=\arabic*.)]
-		      \item $ \congruencia{a^p}{a}{p} $
-		      \item $ p \noDivide a \entonces \congruencia{a^{p-1}}{1}{p} $
-	      \end{enumerate}
-	\item Sea $p$ primo, entonces $ \paratodo a \en \enteros$ tal que $ p \noDivide a$ se tiene:
-	      \[
-		      \congruencia{a^n}{a^{r_{p-1}(n)}}{p} ,\, \paratodo n \en \naturales
-	      \]
-	\item Sea $a \en \enteros$ y $p > 0$ primo tal que $\ub{(a:p) = 1}{a \cop p}$, y sea  $d \en \naturales$ con $d \leq p-1$
-	      el mínimo tal que:
-	      \[
-		      \congruencia{a^d}{1}{p} \entonces d \divideA (p-1)
-	      \]
-\end{itemize}
-
-
-\textit{\underline{Aritmética modular:}}
-
-% Macro local
-\newcommand{\moduloN}[1]{\enteros/_{#1\enteros}}
-% Fin macro local
-
-\begin{itemize}
-	\item Sea $n \en \naturales, n\geq2$\\
-	      $
-		      \moduloN{n} = \set{\clase{0},\clase{1},\cdots, \clase{n-1} }\\
-		      \clase{a},\clase{b} \en \moduloN n:
-		      \llave{l}{
-			      \clase{a} \clase{+} \clase{b} := \overline{r_n(a+b)} \\
-			      \clase{a} \clase{\cdot} \clase{b} := \overline{r_n(a\cdot b)}
-		      }
-	      $
-	\item Sea $p$ primo, en $\moduloN{p}$ todo elemento no nulo tiene inverso multiplicativo,
-	      análogamente a $\enteros$.\\
-	      Si $m \en \naturales$ es compuesto,
-
-	      \begin{itemize}
-		      \item \textit{No todo} $\clase{a} \en \moduloN{m}$ con $\clase{a} \distinto \clase{0}$ es inversible.
-
-		      \item $\existe \clase{a}, \clase{b} \en \moduloN{m}$ con $\clase{a}, \clase{b} \distinto 0$ tal que
-		            $\clase{a}\cdot \clase{b} = \clase{0}$
-
-		      \item Inv$(\moduloN m) = \set{\clase{a} \en \set{\clase{0},\clase{1},\dots, \clase{m-1}}}$ tales que
-		            $a \cop m$
-	      \end{itemize}
-	\item Si $m = p$, con $p$ primo, todo elemento no nulo de $\moduloN p$ tiene inverso:
-	      \begin{itemize}
-		      \item Inv$(\moduloN p) = \set{\clase{1},\dots, \clase{p-1}}$.
-		      \item  \underline{$p$ primo $\entonces \moduloN p$ es un cuerpo.}
-              \item en $\moduloN{p}:\ (\clase{a} + \clase{b})^p = \clase{a}^p + \clase{b}^p $
-	      \end{itemize}
-
-\end{itemize}
-
-
-
-\subsubsection*{Ejercicios dados en clase:}
-\ejercicio Hallar los posibles restos de dividir a $a$ por 70, sabiendo que $(a^{1081}+ 3a + 17 : 105) = 35$\\
-
-\separadorCorto
-$ (\ub{a^{1081}+ 3a + 17}{m} : \ub{105}{3\cdot 5 \cdot 7})  = \ub{35}{5 \cdot 7}
-	\flecha{notar}[que]
-	\llave{l}{
-		5 \divideA m\\
-		7 \divideA m\\
-        3 \noDivide m \red{\to \text{\tiny¡He aquí la más importante info!}}
-	}\\
-	\llave{l}{
-		5 \divideA m
-		\to \congruencia{a^{1081}+ 3a + \ub{17}{\conga{5} 2}}{0}{5}
-		\to
-		\llave{ll}{
-          \text{si} & 5 \divideA a \to \congruencia{2}{0}{5} \magenta{ \text{ningún } a } \skull  \\
-			\text{si} & 5 \noDivide a
-			\flecha{$a^{1081} = a \cdot (a^4)^{270}$}[5 primo y $5 \noDivide a$, fermateo]
-			\congruencia{a + 3a + 2}{0}{5} \to \congruencia{a}{2}{5}\\
-			& \text{si } 5 \divideA m \entonces \boxed{\congruencia{a}{2}{5}}\Tilde
-		}
-		\\
-		7 \divideA m
-		\to \congruencia{a^{1081}+ 3a + \ub{17}{\conga{7} 3}}{0}{7}
-		\to
-		\llave{ll}{
-          \text{si} & 7 \divideA a \to \congruencia{3}{0}{7} \magenta{ \text{ningún } a } \skull  \\
-			\text{si} & 7 \noDivide a
-			\flecha{$a^{1081} = a \cdot (a^6)^{180}$}[7 primo y $7 \noDivide a$, fermateo]
-			\congruencia{a + 3a + 3}{0}{7} \to \congruencia{4a}{-3}{7}\\
-			& \text{si } 7 \divideA m \entonces \boxed{\congruencia{a}{1}{7}}\Tilde
-		}
-		\\
-		3 \noDivide m
-		\to \congruencia{a^{1081}+ 3a + \ub{17}{\conga{3} 2}}{0}{3}
-		\to
-		\llave{ll}{
-			\text{si} & 3 \divideA a \to \congruencia{2}{0}{3}
-			% \flecha{$3\noDivide m$ y $3 \divideA a$}
-			\llave{l}{
-              \text{si } 3 \divideA m \to \congruencia{2}{0}{3} \to \magenta{\text{ningún } a} \skull, \text{ pero} \\
-                \text{quiero } 3 \noDivide m \entonces \magenta{\text{todo } a} \text{, pero en esta rama}\\
-				3 \divideA a \entonces \text{si } 3\noDivide m \to \boxed{\congruencia{a}{0}{3}} \Tilde
-			}\\
-			\text{si} & 3 \noDivide a
-			\flecha{$a^{1081} = a \cdot (a^2)^{540}$}[3 primo y $3 \noDivide a$, fermateo]
-			\congruencia{a + 0 + 2}{0}{7} \to \congruencia{a}{-2}{3}\\
-			& \text{si } 3 \noDivide m \entonces \llamada{1} \boxed{a \not\equiv 1\ (3)}\Tilde
-		}
-	}$
-Debido a la última condición $\llamada{1}$, el problema se ramifica en 2 sistemas:\\
-\begin{minipage}{0.5\textwidth}
-	\centering
-	$
-		\llave{l}{
-			\congruencia{a}{2}{5} \\
-			\congruencia{a}{1}{7} \\
-			\congruencia{a}{0}{3}
-		}
-		\to \boxed{\congruencia{a}{22}{105} }
-	$
-\end{minipage}
-\begin{minipage}{0.5\textwidth}
-	\centering
-	$\llave{l}{
-			\congruencia{a}{2}{5} \\
-			\congruencia{a}{1}{7} \\
-			\congruencia{a}{2}{3}
-		}
-		\to \boxed{\congruencia{a}{92}{105} }
-	$
-\end{minipage}
-Veo que para el conjunto de posibles $a$
-$\llaves{c}{
-		a = 105k_1 + 22 \\
-		o \\
-		a = 105k_2 + 92
-	}\flecha{calculo}[$\conga{70}$]$
-$\congruencia{a}{22}{35} \flecha{quiero los restos}[pedidos del enunciado] r_{70}(a) = \set{22, 57}$,
-valores de $a$ que cumplan condición de $r_{70}(a)$
-
-
-\ejercicio
-Sea $a \en \enteros$ tal que $(a^{197} - 26 : 15) = 1$. Hallar los posibles valores de
-$(a^{97} - 36 : 135)$\\
-\separadorCorto
-Tengo que dar posible valores para $(a^{97} - 36 : 135)$. Como $135 = 3^3\cdot 5$,
-los posibles valores serán de la forma $3^\alpha \cdot 5^\beta$ con
-$ \llaves{l}{
-		0 \leq \alpha \leq 3\\
-		0 \leq \beta \leq 1\\
-	}$ potencialmente $\ub{8}{(3+1)\cdot (1+1)} $posibles valores distintos $\set{1, 3, 9, 27, 5, 15, 45, 135}$\\
-Como condición mínima para que no sea siempre $(a^{97} - 36 : 135) = 1$ es que
-$\llaves{c}{
-		3 \divideA a^{97} - 36\\
-		\text{o bien,}\\
-		5 \divideA a^{97} - 36
-	}$ si no ocurre ninguna de éstas el MCD será 1.\\
-
-$\llave{l}{
-		5 \divideA a^{97} - 36 \to a^{97} - 36 \conga{5} a^{97} -1 \conga5 0
-		\to
-		\llave{ll}{
-			\flecha{si}[$5 \divideA a$] & \congruencia{-1}{0}{5}
-			\flecha{ningún $a$ tal que}[$5 \divideA a$ logra que] 5 \divideA a^{97} - 36 \\
-
-			\flecha{si}[$5 \noDivide a$] & \congruencia{(a^4)^{24} \cdot a -1 }{0}{5}
-			\flecha{5 primo, $5 \noDivide a$}[$\congruencia{a^4}{1}{5}$]
-			\boxed{\congruencia{a}{1}{5}}
-		}\\
-		\text{Se concluye de esta rama que si } 5 \divideA a^{97} - 36
-		\entonces
-		\boxed{\congruencia{a}{1}{5}}\llamada3 \Tilde \\
-
-		\separadorCorto
-
-		3 \divideA a^{97} - 36 \to a^{97} - 36 \conga{3} a^{97} \conga3 0
-		\to
-		\llave{ll}{
-			\flecha{si}[$3 \divideA a$] & \congruencia{0}{0}{3}
-			\flecha{dado que en}[esta rama $a \divideA 3$] \boxed{ \congruencia{a}{0}{3} } \\
-			\flecha{si}[$3 \noDivide a$] & \congruencia{(a^2)^{48} \cdot a}{0}{3}
-			\flecha{3 primo, $3 \noDivide a$}[$\congruencia{a^2}{1}{3} $]
-			\boxed{\congruencia{a}{0}{3}}
-		}\\
-		\text{Se concluye de esta rama que si } 3 \divideA a^{97} - 36
-		\entonces
-		\boxed{\congruencia{a}{0}{3}}\llamada4 \Tilde
-	}$\\
-
-Todo muy lindo pero los valores de $a$ están condicionados por  $(a^{197} - 26 : 15) = 1$
-una condición que "nada" tiene que ver con el MCD, pero que condiciona los valores que puede
-tomar $a$. Como $a^{197} - 26 $ y $15 = 3 \cdot 5$ son coprimos sus factorizaciones en primos
-no pueden tener ningún número factor en común, dicho de otra forma:
-$\llaves{c}{
-		5 \noDivide  a^{197} - 26 \\
-		\text{ y } \\
-		3 \noDivide  a^{197} - 26
-	}$ estudiar estas condiciones me va a restringir los valores de $a$ que puedo usar para construir
-los posibles MCDs.\\
-
-$\llave{l}{
-		\flecha{\magenta{supongo} $5\divideA a^{197} - 26$ y me}[\magenta{quedo con el complemento}]
-		a^{197} - 1 \conga{5} 0
-		\to
-		\llave{l}{
-			\flecha{si}[$5 \divideA a$]
-			\congruencia{-1}{0}{5}
-			\flecha{\green{ningún} $a$ tal que}[$5 \divideA a$ logra que] 5 \divideA a^{197} - 26 \\
-			\flecha{el \magenta{complemento de "\green{ningún}" es }}[\magenta{todo $a$} pero como $5\divideA a$]
-			\congruencia{a}{0}{5}\\
-			\separadorCorto
-			\flecha{si}[$5 \noDivide a$]
-			\congruencia{(a^4)^{49} \cdot a - 1}{0}{5}
-			\flecha{5 primo, $5\noDivide a$}[$\congruencia{a^4}{1}{5}$]
-			\congruencia{a}{1}{5}\llamada1\\
-			\flecha{agarro el}[complemento de $\llamada1$]
-			\llave{l}{
-				\hbox{\sout{$\congruencia{a}{0}{5}$}} \to \text{rama $5\noDivide a$} \\
-				\congruencia{a}{2}{5} \\
-				\congruencia{a}{3}{5} \\
-				\congruencia{a}{4}{5} \\
-			}
-		}\\
-
-		\separadorCorto
-
-		\flecha{\magenta{supongo} $3\divideA a^{197} - 26$ y me}[\magenta{quedo con el complemento}]
-		a^{197} - 2 \conga{3} 0
-		\to
-		\llave{l}{
-			\flecha{si}[$3 \divideA a$]
-			\congruencia{-2}{0}{3}
-			\flecha{\green{ningún} $a$ tal que}[$3 \divideA a$ logra que] 3 \divideA a^{197} - 26 \\
-			\flecha{el \magenta{complemento de "\green{ningún}" es }}[\magenta{todo $a$} pero como $3\divideA a$]
-			\congruencia{a}{0}{3}\\
-			\separadorCorto
-			\flecha{si}[$3 \noDivide a$]
-			\congruencia{(a^2)^{93} \cdot a - 2}{0}{3}
-			\flecha{3 primo, $3\noDivide a$}[$\congruencia{a^2}{2}{3}$]
-			\congruencia{a}{2}{3}\llamada2\\
-			\flecha{agarro el}[complemento de $\llamada2$]
-			\llave{l}{
-				\hbox{\sout{$\congruencia{a}{0}{3}$}} \to \text{rama $3\noDivide a$} \\
-				\congruencia{a}{1}{3}
-			}
-		}\\
-
-	}$\\
-\text{Se concluye del estudio que si } $5 \noDivide a^{197} - 26$ y
-$3 \noDivide a^{197} - 26 \to $
-\boxed{
-	\llave{cr}{
-		\congruencia{a}{0}{5} & \text{ o }\\
-		\congruencia{a}{2}{5} & \text{ o }\\
-		\congruencia{a}{3}{5} & \text{ o }\\
-		\congruencia{a}{4}{5}\\
-		\text{ y }&\\
-		\congruencia{a}{0}{3} & \text{ o }\\
-		\congruencia{a}{1}{3}
-	}
-}, 8 sistemas $\skull$ \\
-
-Para que el MCD \textit{no sea 1}, se deben satisfacer $\llamada3$ o $\llamada4$, lo cual no ocurre
-nunca con $\llamada3$. Eso acota los valores de $(a^{97} - 36 : 135)$ a $\set{1,3,9,27}$\\
-De los 4 sistemas útiles:\\
-$
-	\llave{l}{
-		\congruencia{a}{0}{5}\\
-		\congruencia{a}{0}{3}
-	}
-	\flecha{solución} \congruencia{a}{0}{15}\flecha{con $a = 0$}
-	\llave{l}{
-		0^{97} - 36 \conga{3} 0\\
-		0^{97} - 36 \conga{9} 0 \Tilde\\
-		0^{97} - 36 \conga{27} - 9 \not\conga{27} 0 \\
-	}
-	\\
-	\llave{l}{
-		\congruencia{a}{2}{5}\\
-		\congruencia{a}{0}{3}
-	}
-	\flecha{solución} \congruencia{a}{12}{15}
-	\flecha{con $a = 12$}
-	\llave{l}{
-		12^{97} - 36 \conga{3} 0\\
-		12^{97} - 36 \conga{9} 4^{97} \cdot (3^2)^{48} \cdot 3 \conga9 0 \Tilde\\
-		12^{97} - 36 \conga{27} 4^{97} \cdot (3^3)^{32} \cdot 3^1 - 9 \conga{27} -9 \not\conga{27} 0 \\
-	}
-	\\
-	\llave{l}{
-		\congruencia{a}{3}{5}\\
-		\congruencia{a}{0}{3}
-	}
-	\flecha{solución} \congruencia{a}{3}{15}
-	\\
-	\llave{l}{
-		\congruencia{a}{4}{5}\\
-		\congruencia{a}{0}{3}
-	}
-	\flecha{solución} \congruencia{a}{9}{15}
-	\flecha{con $a = 9$}
-	\llave{l}{
-		9^{97} - 36 \conga{3} 0\\
-		9^{97} - 36 \conga{9} 0 \to (9^{97} - 36:135) = 9 \Tilde\\
-		9^{97} -36 \conga{27} (3^3)^{64} \cdot 3^2 - 9 \conga{27} -9 \not\conga{27} 0 \\
-	}\\
-$
-
-\noindent Después de fumarme eso: $(a^{97} - 36 : 135) \en\set{1,9}$, porque todas las soluciones cumplen que:\\
-$3 \divideA a^{97} \entonces 9 \divideA a^{97}\entonces 27 \divideA a^{97}$ y como $9 \divideA 36$ y $27 \noDivide 36$
-siempre el mayor divisor de la expresión va a ser 9.
-
-\red{No estoy súper convencido. ¿Podría ocurrir que en algún caso de 27?}\\
-
-\newpage
 
 %=========================
-% Ejercicio guia
+% Un poco de teoría
+%=========================
+\input{./teoria-5/teoria-5.tex}
+
+\newpage % página nueva
+
+%=========================
+% Ejercicios extras, parciales, etc.
+%=========================
+\subsubsection*{Ejercicios extras:}
+
+\foreach \x in {1,...,2} {
+		\input{./ejercicios-5-extra/ej-extra-\x-5.tex}
+	}
+
+\newpage % página nueva
+
+%=========================
+% Ejercicios guia
 %=========================
 
-\section*{Ejercicios de la guía:}
-\setcounter{ejercicio}{0} % Reset the custom counter
-%1
-\ejercicio
+\subsubsection*{Ejercicios de la guía:}
+\setcounter{ejercicio}{0} % Reset el counter de \ejercicio
 
-%2
-\ejercicio
-Determinar todos los $(a,b)$ que simultáneamente $4 \divideA a,\, 8 \divideA b \y 33a + 9b = 120$.
-
-\separadorCorto
-Si $(33:9) \divideA 120 \entonces 33a + 9b = 120$ tiene solución. $(33:9)=3,\, 3 \divideA 120$\Tilde\\
-$
-	\llave{l}{
-		4 \divideA a \to a = 4k_1\\
-		8 \divideA b \to b = 8k_2
+\foreach \x in {1,...,30} {
+		\input{./ejercicios-5/ej-\x-5.tex}
 	}
-	\flecha{meto en}[$33a + 9b = 120$]
-	132 k_1 + 72 k_2 = 120
-	\flecha{$(132:72) = 12 \divideA 120$}[coprimizo]
-	11 k_1 + 6 k_2 = 10$ \\
-
-\noindent Busco solución particular con algo parecido a Euclides:\\
-$\llaves{l}{
-		11 = 6 \cdot 1 + 5 \\
-		6 = 5 \cdot 1 + 1 \Tilde \\
-	}
-	\flecha{escribo al 1 como}[combinación entera de \blue{11} y \blue{6}]
-	1 =  \blue{11} \cdot -1 + \blue{6} \cdot -2
-	\flecha{solución}[particular]
-	10 = \blue{11}\cdot(\ub{-10}{k_1})   + \blue{6} \cdot \ub{20}{k_2} \\
-$
-Para $11 k_1 + 6 k_2 = 10$ tengo la solución general $(k_1, k_2) = (-10 + (-6)k, 20 + 11k)$ con $k \en \enteros$\\
-Pero quiero los valores de $a$ y $b$:\\
-La solución general será $\boxed{(a,b) = (4k_1, 8k_2) = (-40 + 24 k, 160 + (-88)k)}$\\
-
-\noindent Otra respuesta con solución a ojo menos falopa, esta recta es la misma que la anterior:\\
-$(a,b) = (2+3k, 6-11k)$ con $\congruencia{k}{2}{8} $\\
-
-%3
-\ejercicio
-Si se sabe que cada unidad de un cierto producto $A$ cuesta $39$ pesos y que cada unidad de un cierto
-producto $B$ cuesta 48 pesos, ¿cuántas unidades de cada producto se pueden comprar gastando exactamente
-135 pesos?
-
-\separadorCorto
-
-$
-	\llave{l}{
-		A \geq 0 \y B \geq 0 \text{. Dado que son productos.}\\
-		(A:B) = 3 \entonces 39A + 28B = 135
-		\flecha{coprimizar}
-		13A + 16B = 45\\
-		\text{ A ojo } \to (A,B) = (1,2)
-	}
-$
-
-%4
-\ejercicio
-Hallar, cuando existan, todas las soluciones de las siguientes ecuaciones de congruencia:
-
-\separadorCorto
-
-\begin{enumerate}[label=\roman*)]
-	\item $\congruencia{17X}{3}{11} \flecha{respuesta} \congruencia{X}{6}{11} $\\
-	      \red{pasar}
-
-	\item $\congruencia{56X}{28}{35}\\
-		      \llave{l}{
-			      \congruencia{56X}{28}{35} \sisolosi
-			      \congruencia{7X}{21}{35} \stackrel{\red{?}}\sisolosi
-			      7X - 35K = 21\\
-			      \flecha{a}[ojo] (X,K) = (-2,-1) + q \cdot (-5, 1)\\
-			      \congruencia{X}{-2}{5} \sisolosi \congruencia{X}{3}{5} = \set{\dots, -2, 3, 8, \dots, 5q+3}
-		      }\\
-		      \flecha{respuesta} \congruencia{X}{3}{5} $
-	      \red{corroborar}
-
-	\item
-	\item $\congruencia{78X}{30}{12126}  \to 78X - 12126 Y = 30 \flecha{$(78:12126) = 6$}[coprimizando] 13X - 2021 Y = 5$\\
-	      Busco solución particular con algo parecido a Euclides:\\
-	      $\llave{l}{
-			      \blue{2021} =  \blue{13} \cdot 155 + 6\\
-			      13 =  6 \cdot 2 + 1
-		      }\flecha{Escribo al 1 como}[combinación de \blue{13} y\blue{2021}]
-		      1 = \blue{13} \cdot 311 + \blue{2021} \cdot (-2)
-		      \flecha{quiero}[al 5]
-		      5 =  \blue{13}\cdot 1555 + \blue{2021} \cdot (-10)$\\
-
-	      Respuesta: $\boxed{\congruencia{78X}{30}{12126}
-			      \stackrel{\red{?}} \sisolosi \congruencia{X}{1555}{2021}}$
-
-\end{enumerate}
-
-%5
-\ejercicio
-Hallar todos los $(a,b) \en \enteros^2$ tales que $\congruencia{b}{2a}{5}$ y $28a + 10b = 26$.
-
-\separadorCorto
-Parecido al \textbf{2.}.\\
-$ \congruencia{b}{2a}{5} \sisolosi b = 5k + 2a
-	\flecha{meto en}[$28a + 10b = 26$]
-	48a + 50k = 26
-	\flecha{$(48:59) = 2$}[$2 \divideA 26$]
-	24a + 25k = 13
-	\flecha{a}[ojo]
-	\llaves{l}{
-		a = -13 + (-25)q\\
-		k = 13 + 24 q
-	}
-$\\
-\textit{Let's corroborate:}\\
-$b = 5\cdot \ub{(13 + 24q)}{k} + 2\cdot \ub{(-13 + (-25)q)}{a} = 39 + 70q
-	\llave{l}{
-		b = \congruencia{39 + 70 q}{4}{5}\Tilde  \\
-		2a = \congruencia{-26-50q}{-1}{5} \congruente 4\ (5)\Tilde
-	}$
-
-%10
-\setcounter{ejercicio}{9}
-\ejercicio Hallar, cuando existan, todos los enteros $a$ que satisfacen simultáneamente:\\
-
-\begin{enumerate}[label=\roman*)]
-	\item
-	      $
-		      \llave{l}{
-			      \llamada1 \congruencia{a}{3}{10} \\
-			      \llamada2 \congruencia{a}{2}{7} \\
-			      \llamada3 \congruencia{a}{5}{9} \\
-		      }
-	      $\\
-	      El sistema tiene solución dado que 10, 7 y 9 son coprimos dos a dos. Resuelvo:\\
-	      $\flecha{Arranco}[ en $\llamada1$]
-		      a = 10k + 3 \conga{7}
-		      3k + 3 \conga{\llamada2}
-		      2\ (7)
-		      \flecha{usando que}[$3\cop 7$] \congruencia{k}{2}{7}
-		      \to k = 7q + 2.\\
-		      \flecha{actualizo}[$a$]
-		      a = 10 \cdot \ub{(7q + 2)}{k} + 3 = 70 q + 23 \conga9
-		      7q \conga{\llamada3}
-		      5\ (9)
-		      \flecha{usando que}[$7\cop 9$] \congruencia{q}{0}{9}
-		      \to q = 9j\\
-		      \flecha{actualizo}[$a$]
-		      a = 70 \ub{(9j)}{q} + 23 = 680j + 23 \to \boxed{\congruencia{a}{23}{630}} \Tilde
-	      $\\
-	      La solución hallada es la que el Teorema chino del Resto me garantiza que tengo en el
-	      intervalo $[0, 10\cdot 7 \cdot 9)$
-
-	\item
-
-	\item $
-		      \llave{l}{
-			      \llamada1 \congruencia{a}{1}{12} \\
-			      \llamada2 \congruencia{a}{7}{10} \\
-			      \llamada3 \congruencia{a}{4}{9}
-		      }
-	      $
-
-
-\end{enumerate}
-
-
-
-%15
-\setcounter{ejercicio}{14}
-\ejercicio
-Hallar el resto de la división de $a$ por $p$ en los casos.
-
-\separadorCorto
-\begin{enumerate}[label=\roman*)]
-	\item $a = 71^{22283},\, p=11$
-
-	      \separadorCorto
-	      $a = 71^{22283} = 71^{10 \cdot 2228 +2 + 1} = \ub{(71^{10})^{2228}}{\stackrel{11 \noDivide p}{\congruente} 1^{2228}\ (11)} \cdot 71^2 \cdot 71^1 \congruente 71^3 \ (11) \to \congruencia{a}{5^3}{11} $\Tilde\\
-	      Usando corolario con $p$ primo y $p \cop 71$,  $\to \congruencia{71^{22283}}{71^{r_{10}(22283)}}{11} \congruente 71^3 \ (11) \to  \congruencia{a}{5^3}{11} \Tilde$
-
-	\item $a = 5 \cdot 7^{2451} + 3 \cdot 65^{2345} - 23 \cdot 8^{138}, \, p = 13$
-
-	      \separadorCorto
-	      $\congruencia{a}{5 \cdot 7^{204 \cdot 12 + 3} + 3 \cdot 8^{11 \cdot 12 + 6}}{13}
-		      \to
-		      \congruencia{a}{5 \cdot (7^{12})^{204} \cdot 7^3 + 3 \cdot (8^{12})^{11} \cdot 8^6}{13}\\
-		      \flecha{$p \noDivide 7$}[$p \noDivide 8$]
-		      \congruencia{a}{5\cdot 7^3 + 3 \cdot 8^6 }{13}
-		      \to
-		      \congruencia{a}{5\cdot(- 6^3 + 3 \cdot 5^5)}{13} $ \red{consultar}
-\end{enumerate}
-
-%16
-%Macro local
-\def\cong97{\stackrel{(97)}\congruente}
-
-\ejercicio
-Resolver en $\enteros$ las siguientes eecuaciones de congruencia:
-
-\separadorCorto
-
-\begin{enumerate}[label=\roman*)]
-	\item $\congruencia{2^{194}X}{7}{97}$
-
-	      \separadorCorto
-	      $\flecha{$2 \cop 97$}  2^{194} = (2^{96})^{2} \cdot 2^2 \congruente 4\ (97)
-		      \to
-		      \congruencia{4X}{7}{97}
-		      \flecha{$\times 24$}
-		      \congruencia{-X}{\ub{168}{\cong97 71}}{97}
-		      \flecha{$-71 \cong97 26$} \congruencia{X}{26}{97} $\Tilde
-
-	\item $\congruencia{5^{86}X}{3}{89}$\\
-
-	      \separadorCorto
-	      \hacer
-\end{enumerate}
-
-\setcounter{ejercicio}{19}
-\ejercicio
-% macro local
-
-%Macro local
-\def\sumLocal{\sumatoria{i=1}{1759}}
-% fin macro local
-
-Hallar el resto de la división de:
-\begin{enumerate}[label=\roman*)]
-	\item $43 \cdot 7^{135} + 24^{78} + 11^{222}$ por 70
-	\item $\sumLocal i^{42}$ por 56
-\end{enumerate}
-
-\separadorCorto
-
-\begin{enumerate}[label=\roman*)]
-	\item \hacer
-
-	\item Calcular el resto pedido equivale a resolver la ecuaición de equivalencia:\\
-	      $ \congruencia{X}{\sumLocal i^{42}}{56} $ que será aún más simple en la forma:
-	      $\llave{l}{
-			      \congruencia{X}{\sumLocal i^{42}}{7}\\
-			      \congruencia{X}{\sumLocal i^{42}}{8}
-		      }\\
-		      \text{Primerlo estudio la ecuación de módulo 7: }\\
-		      \llave{l}{
-                \congruencia{\sumLocal i^{42}}{X}{7} \llamada{1}
-
-			      \flecha{7 es primo, uso \magenta{Fermat}}[si $p \noDivide i \to i^{42} = \congruencia{(i^6)^7}{1}{7}$]
-			      \sumLocal i^{42} = \sumLocal (i^6)^7
-			      \flecha{$251 \cdot 7 + 2 = 1759$}\\
-			      \sumLocal (i^6)^7 \conga7 251 \cdot \parentesis{(1^6)^7 + (2^6)^7 + (3^6)^7 + (4^6)^7 + (5^6)^7 + (6^6)^7 + (7^6)^7} + \parentesis{(1^6)^7 + (2^6)^7 + (3^6)^7 + (4^6)^7}\\
-			      \sumLocal (i^6)^7 \magenta{\conga7 } 251 \cdot \parentesis{1 + 1 + 1 + 1 + 1 + 1 + 0} + \parentesis{1 + 1 + 1 + 1} =
-			      251 \cdot  6 + 4 \conga7 3\\
-                  \flecha{$\llamada{1}$ } \boxed{\congruencia{X}{3}{7}}\\
-		      }$\\
-	      Ahora se labura el módulo 8.\\
-
-	      $\llave{l}
-		      {
-			      \congruencia{\sumLocal i^{42}}{X}{8}
-			      \flecha{8 no es primo}[no uso Fermat]
-			      \text{Analizo a mano}
-			      \flecha{$219 \cdot 8 + 7 = 1759$}
-			      \congruencia{X}{\sumLocal i^{42}}{8} \conga8
-			      \\
-			      \conga8 219 \cdot \ub{(1^{42} + 2^{42} + 3^{42} + 4^{42} + 5^{42} + 6^{42} + 7^{42} + 0^{42})}{\text{8 términos: } r_8(i^{42}) = (r_8(i))^{42} }
-			      + (1^{42} + 2^{42} + 3^{42} + 4^{42} + 5^{42} + 6^{42} + 7^{42}) \\
-			      \to
-			      \llaves{l}{
-				      2^{42} = (2^3)^{14}\conga8 0\\
-				      4^{42} = (2^3)^{14} \cdot (2^3)^{14}\conga8 0\\
-				      6^{42} = (2^3)^{14} \cdot 3^{42} \conga8 0\\
-				      1^{42} = 1\\
-				      3^{42} = (3^2)^{21} \conga8 1^{21} = 1\\
-				      5^{42} = (5^2)^{21} \conga8 1^{21} = 1\\
-				      7^{42} = (7^2)^{21} \conga8 1^{21} = 1
-			      }\\
-			      \flecha{reemplazo}[esa en]
-			      \sumLocal i^{42} \conga8 219 \cdot 4 + 4  = 880 \conga8 0 \to \boxed{\congruencia{X}{0}{8}}\\
-		      }$\\
-	      El sistema
-	      $\llave{l}{
-			      \congruencia{X}{3}{7} \\
-			      \congruencia{X}{0}{8} \\
-		      }$ tiene solución $\congruencia{X}{24}{56}$, por lo tanto el \textit{resto pedido}: \boxed{ r_{56}\parentesis{\sumLocal i^{42}} = 24}
-\end{enumerate}
-
-
-
-
-\setcounter{ejercicio}{21}
-%22
-\ejercicio
-Resolver en $\enteros$ la ecuación de congruencia $\congruencia{7X^{45}}{1}{46}$.
-
-\separadorCorto
-$\congruencia{7X^{45}}{1}{46}
-	\flecha{multiplico por}[13]
-	\congruencia{91X^{45}}{13}{46}
-	\to \congruencia{X^{45}}{-13}{46}
-	\to \congruencia{X^{45}}{33}{46}\\
-	\to
-	\llave{l}{
-		\congruencia{X^{45}}{33}{23} \to\congruencia{X^{45}}{10}{23}
-		\flecha{23 primo y $23\noDivide X$}[$\congruencia{X^{22}}{1}{23}$]
-		X^{22} X^{22} X^{1} \conga{23} \congruencia{X}{10}{23}\\
-
-		\congruencia{X^{45}}{10}{2} \to  \congruencia{X^{45}}{0}{2}
-		\flecha{$X$ multiplicado por}[si mismo impar veces]
-		\congruencia{X}{0}{2}\\
-	}
-$\\
-La ecuación de congruencia \boxed{\congruencia{X}{10}{46}} cumple las condiciones encontradas.
-
-
-
-% 23
-\ejercicio Hallar todos los divisores positivos de $25^{70}$ que sean congruentes a 2 módulo 9 y 3 módulo 11.
-\separadorCorto
-Quiero que ocurra algo así:
-$\llave{l}{
-		\congruencia{25^{70}}{0}{d} \to \congruencia{5^{140}}{0}{d}  \\
-		\congruencia{d}{2}{9} \\
-		\congruencia{d}{3}{11}
-	}$.
-De la primera ecuación queda que el divisor $d = 5^\alpha$ con $\alpha$ compatible
-con las otras ecuaciones.
-$\to
-	\llave{l}{
-		\congruencia{5^\alpha}{2}{9} \\
-		\congruencia{5^\alpha}{3}{11}
-	}$\\
-
-$\to \text{Usaré viejo truco de exponenciales de módulo periódicas:}\\
-	\flecha{Busco}[$5^{a} \conga{d} 1$]
-	\llave{l}{
-		\congruencia{5^\alpha}{2}{9} \\
-		\congruencia{5^3}{-1}{9} \flecha{al}[cuadrado] \congruencia{5^6}{1}{9}
-		\flecha{$5^\alpha = 5^{6k+r_6(\alpha)} = (\ob{5^6}{\conga9 1})^k 5^{r_6(\alpha)}$}[tabla de restos]
-		\begin{array}{|l|l|l|l|l|l|l|}
-			\hline
-			r_6(\alpha)   & 0 & 1 & 2 & 3 & 4 & 5       \\ \hline
-			r_9(5^\alpha) & 1 & 5 & 7 & 8 & 4 & \red{2} \\ \hline
-		\end{array}\\
-		\flecha{por lo}[tanto] \text{para que } \congruencia{5^\alpha}{2}{9} \entonces \boxed{\congruencia{\alpha}{5}{9}}\Tilde     \\
-
-		\separadorCorto
-
-		\congruencia{5^\alpha}{3}{11}\flecha{a ojo}[$\alpha = 2$] \congruencia{\magenta{5^2}}{3}{11} \\
-		\flecha{fermateo}[11 es primo, $11\noDivide 5$]
-		\congruencia{\green{5^{10}}}{1}{11}
-		\flecha{noto que tengo otro}[cuando hago $5^{12}$]
-		\congruencia{\magenta{5^2} \cdot \green{5^{10}}}{3}{11}\\
-		\flecha{para no perder soluciones de $\congruencia{5^\alpha}{3}{11} $}[tabla de restos por las dudas]
-		\begin{array}{|l|l|l|l|l|l|l|l|l|l|l|}
-			\hline
-			r_{10}(\alpha)   & 0 & 1 & 2       & 3 & 4 & 5        \\ \hline
-			r_{11}(5^\alpha) & 1 & 5 & \red{3} & 4 & 9 & \cyan{1} \\ \hline
-		\end{array}\\
-		\flecha{por lo tanto hay}[periodicidad de 5] \text{para que } \congruencia{5^\alpha}{3}{11}
-		\entonces
-		\boxed{\congruencia{\alpha}{2}{5}} \Tilde\\
-	}$\\
-El sistema
-$\llave{l}{
-		\congruencia{\alpha}{5}{9} \\
-		\congruencia{\alpha}{2}{5}
-	}$
-se resuelve para $\congruencia{\alpha}{32}{45}$ y además $0<\alpha \leq 140$ lo que se
-cumple para $\alpha = 45k + 32 =
-	\llaves{lcr}{
-		32  &  \text{ si } & k = 0\\
-		77  &  \text{ si } & k = 1 \\
-		122 &  \text{ si } & k = 2
-	} \to \boxed{\divsetP{25^{70}}{ 5^{32}, 5^{77}, 5^{122} }}  $
-
 \end{document}
