--- a/7-guia/7-sol.tex
+++ b/7-guia/7-sol.tex
@@ -22,7 +22,7 @@
 %=========================
 \subsubsection*{Ejercicios extras:}
 
-\foreach \x in {1} {
+\foreach \x in {1,...,2} {
 		\input{./ejercicios-7-extra/ej-extra-\x-7.tex}
 	}
 
